[package]
name = "wfc_polygon"
version = "0.0.0"
edition = "2021"
authors = ["Brett Striker <strikeforcezero@gmail.com"]
license = "MIT OR Apache-2.0"

[workspace]
members = ["examples/*"]

[dev-dependencies]
anyhow = "1"

[dependencies]
rand = "0.8"
thiserror = "1"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
