[package]
name = "wfc_polygon"
version = "0.0.0"
edition = "2021"
authors = ["Brett Striker <strikeforcezero@gmail.com"]
license = "MIT OR Apache-2.0"

[workspace]
members = ["examples/*"]

[dev-dependencies]
anyhow = "1"
tracing-subscriber = "0.3"

[dependencies]
rand = "0.8"
thiserror = "1"
tracing = "0.1"
