[package]
name = "hex"
version = "0.0.0"
edition = "2021"

[dependencies]
wfc_polygon = { path = "../../" }
bevy = { version = "0.13", features = ["serialize"] }
bevy-inspector-egui = "0.24.0"
bevy_mod_picking = "0.18.2"
itertools = "0.13.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
ron = "0.8.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
